<resources>
    <string name="app_name">Positively Pregnant</string>
    <string name="action_settings">Reset</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">&lt;&lt;&lt; BACK</string>
    <string name="done">Done</string>
    <string name="welcome_welcome">Welcome</string>
    <string name="welcome_heading">Here you’ll find tools for assessing your strengths, stressors, and strategies, activities to relax and enhance wellbeing, and information on how to keep yourself on track to well-balanced motherhood.</string>
    <string name="welcome_text">For the most personalised experience, take some time to answer a few configuration questions in the self assessment </string>
    <string name="welcome_text_part2">.. or just get going with some exercises.</string>
    <string name="welcome_welcome_middle">Welcome back</string>
    <string name="welcome_text_middle">Why don\'t you take some time and answer more configuration questions. It will give a more personalised experience</string>
    <string name="welcome_text_part2_middle">.. you can always go directly to the exercises.</string>
    <string name="welcome_welcome_top">Welcome, NAME</string>
    <string name="welcome_text_top">You can adjust your configuration here </string>
    <string name="welcome_text_part2_top">.. or do some recommended exercises.</string>
    <string name="infoText">Here are some brief articles about psychological well-being and pregnancy.</string>
    <string name="assessment1">Strengths</string>
    <string name="assessment2">Stress Management</string>
    <string name="assessment3">Strategies</string>
    <string name="assessment4">Destress</string>
    <string name="assessment5">Healthy Choices</string>
    <string name="physical_subheading">Physical</string>
    <string name="intellectual_subheading">Intellectual</string>
    <string name="social_subheading">Social</string>
    <string name="individual_subheading">Individual</string>
    <string name="strategy_subheading">Strategies</string>
    <string name="physical_question_1"><b>Appearance:</b>  How do you feel about how you look? Is this your strong suit, something you care about and spend energy on looking nice?</string>
    <string name="physical_question_2"><b>Health:</b>  How is your overall health—are you generally sick, or healthy?  Most of the time (irrespective of whether you’ve got a cold right now, or any minor pregnancy woes), do you consider yourself to be in good health?</string>
    <string name="physical_question_3"><b>Motor skills/coordination:</b> Are you the sort of person who can pick up a new sport quickly?  Dance? Feel confident about how you move and do things, physically?</string>
    <string name="physical_question_4"><b>Fitness:</b> Are you generally physically fit, with good stamina?</string>
    <string name="intellectual_question_1"><b>Problem-solving:</b> How are you at figuring out how to get something done—when faced with a problem, thinking of what you need to do to fix it?</string>
    <string name="intellectual_question_2"><b>Creativity:</b> Do you think of new and different ways to do things—put your own twist on it?</string>
    <string name="intellectual_question_3"><b>Verbal skills:</b> How good are you at understanding things you hear and read, and communicating—telling others what you want to tell them, in writing or orally?	</string>
    <string name="intellectual_question_4"><b>Visual-spatial:</b> How good are you at doing things in the non-verbal world—like puzzles, drawing, sewing, mechanical things, using a map?</string>
    <string name="intellectual_question_5"><b>Memory:</b> How is your memory?  Generally, can you remember what you need to do?  What you once learned?  What you need at the store?  That person’s name?</string>
    <string name="intellectual_question_6"><b>Concentration:</b> Can you usually focus on what you need to do, and maintain that focus for a reasonable amount of time—30—60 minutes, depending on the activity?</string>
    <string name="intellectual_question_7"><b>Knowledge:</b> Are you a font of information?  Do you know a lot of things…useful or not?</string>
    <string name="intellectual_question_8"><b>Curiosity:</b> Do you find yourself interested in new things, easily engaged with finding out about some new idea, activity, place to go?</string>
    <string name="social_question_1"><b>Compassion and kindness:</b> Do you think of others frequently, try to take on their perspective, wonder how they are doing? </string>
    <string name="social_question_2"><b>Friendliness:</b> Are you welcoming to others, curious about them, inviting them to talk about themselves, allowing them to get to know you?</string>
    <string name="social_question_3"><b>Loyalty:</b> Are you steadfast and faithful, sticking by people you care about, and true to ideals you hold?</string>
    <string name="social_question_4"><b>Honesty:</b> Are you consistently truthful and sincere, not prone to change the story or play with the facts a bit?</string>
    <string name="social_question_5"><b>Courtesy:</b> Are you polite, careful to put others at ease and know the appropriate rules for the occasion?</string>
    <string name="social_question_6"><b>Discretion/tact:</b> Are you thoughtful about what you say and do, keeping secrets when appropriate, considering others and avoiding giving offense? </string>
    <string name="social_question_7"><b>Generosity:</b> Are you open-handed, giving freely of your time and resources?</string>
    <string name="social_question_8"><b>Helpfulness:</b> Do you help others when you see their need?</string>
    <string name="social_question_9"><b>Modesty:</b> Are you low-key about your talents and accomplishments, avoiding boasting or vanity?</string>
    <string name="social_question_10"><b>Sensitivity:</b> Are you attuned to the feelings and reactions of others, as well as your own?</string>
    <string name="social_question_11"><b>Forgiveness:</b> Do you forgive others when they have done something that hurt you, or went against your values?</string>
    <string name="social_question_12"><b>Leadership:</b> Are you the sort of person who can take the lead in a group and inspire people to work together and accomplish their goals?</string>
    <string name="social_question_13"><b>Affection:</b> Are you a person who can express your love and affection easily and openly, telling people you care and showing your love?</string>
    <string name="individual_question_1"><b>Persistence/perseverance:</b> Do you keep on going, pushing through problems, no matter what?</string>
    <string name="individual_question_2"><b>Faith:</b> Do you have faith in the way the world works, whether in formal religion or a personal spiritual understanding?</string>
    <string name="individual_question_3"><b>Sense of humour:</b> Can you see the humour in life, both finding it yourself and appreciating the humour of others? </string>
    <string name="individual_question_4"><b>Patience:</b> Are you able to tolerate delays and bumps in the road without becoming overly upset or frustrated? </string>
    <string name="individual_question_5"><b>Reliability:</b> Do you consistently do what you say you will do—so others can count on you if you say you will do something? </string>
    <string name="individual_question_6"><b>Responsibility:</b> Do you acknowledge what you have done, right or wrong? </string>
    <string name="individual_question_7"><b>Courage:</b> Do you persist in the face of fear, and attempt things others might find too daunting to approach?</string>
    <string name="individual_question_8"><b>Confidence:</b> Do you have faith in yourself, and expect that you will be able to accomplish what you set out to do? </string>
    <string name="individual_question_9"><b>Enthusiasm:</b> Do you plunge into things with energy and joy, and the expectation that whatever it is will be a good thing?</string>
    <string name="individual_question_10"><b>Flexibility:</b> Can you change tactics when what you are doing isn’t working?  Try different things and ways of behaving?  </string>
    <string name="individual_question_11"><b>Hopefulness/optimism:</b> Do you tend to expect things will come out all right in the end?  Do you see the bright side, usually, and see the glass as half full?  </string>
    <string name="individual_question_12"><b>Resourcefulness:</b> Can you find a way to use what you have, to get the job done?</string>
    <string name="individual_question_13"><b>Resiliency/toughness:</b> When things go wrong, do you stand up to it and keep on going?  Are you able to bounce back from hard times? </string>
    <string name="individual_question_14"><b>Stewardship:</b> Do you use what you have wisely, not wasting resources of whatever sort? </string>
    <string name="individual_question_15"><b>Thankfulness:</b> Do you recognise and appreciate what you have, and the good things in the world around you?</string>
    <string name="individual_question_16"><b>Organisation:</b> Are you good at making plans, keeping things in order and keeping track of the events and objects of your life?</string>
    <string name="stress_question_1"><b>Exercise: </b> How do you feel about it? </string>
    <string name="stress_question_2"><b>Mini-break: </b> How do you feel about it? </string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_doing">Activities</string>
    <string name="title_activity_self_assessment">Self Assessment</string>
    <string name="title_activity_breathing_rate">Breathing Rate</string>
    <string name="title_activity_breathing_instructions">Breathing Instructions</string>
    <string name="title_activity_breathing_measure">Breathing Measure</string>
    <string name="title_activity_breathing_learn">Breathing Learn</string>
    <string name="title_activity_heart_rate">Heart Rate</string>
    <string name="title_activity_skin_temperature">Skin Temperature</string>
    <string name="title_activity_music">Music</string>
    <string name="assessment_heading">Strengths</string>
    <string name="assessment_text">We all have different things going for us: areas in which we are strong, feel confident, and have the supports and skills we need.
        This quiz is to help you to assess, and remember, what those areas are for you.</string>
    <string name="activity_intro">Here are some options for activities that might enhance your well-being</string>
    <string name="stress_intro"><b>Different things work for different people.</b>  In this assessment, you will see a range of options—things that work for some people to relax and manage stress.  You’ll rate how effective each one is, or might be, for you.  \nAfter you’ve completed this self-assessment, you can access “Tools for Wellbeing”-personalised ideas to help you manage stress and stay healthy. If you are feeling stressed, or just have a few minutes to take care of yourself, choose “Tools for Wellbeing” for ideas of what you might do.</string>
    <string name="strength_intro"><b>We all have different areas of strength</b> that support us in times of challenge and stress.  This assessment will help to identify what you see as your strengths, and the people and things you can rely on to support you.  \nAfter you’ve completed this self-assessment, you can access “Strength Reminders”—reminders of what your strengths are, and how you can use those to build your resilience.</string>
    <string name="title_activity_strength_reminders">Strength Reminders</string>
    <string name="title_activity_stress_reminders">Strategy Suggestions</string>
    <string name="information_text1">What is Stress?</string>
    <string name="information_text3">Stress and the Body</string>
    <string name="information_text5">Coping with Stress</string>
</resources>