<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenu"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textSubheading"
        style="@style/purpleSubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/title_activity_information" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcome_text"
            style="@style/purple"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/infoText" />

        <Button
            android:id="@+id/information_text1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/purple_button"
            android:text="@string/information_text1"
            android:textColor="@color/white"
            android:width="270dp" />

        <Button
            android:id="@+id/information_text2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/purple_button"
            android:singleLine="false"
            android:text="@string/information_text3"
            android:textColor="@color/white"
            android:width="270dp" />

        <Button
            android:id="@+id/information_text3"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/purple_button"
            android:enabled="true"
            android:text="@string/information_text5"
            android:textColor="@color/white"
            android:width="270dp" />
    </LinearLayout>

</LinearLayout>