<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".SelfAssessmentActivity" >

    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        

        <Button
            android:id="@+id/ButtonBreathingRate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/purple_button"
            android:enabled="true"
            android:onClick="startBreathingRate"
            android:text="@string/title_activity_breathing_rate"
            android:textColor="@color/white"
            android:width="270dp" />

        <Button
            android:id="@+id/ButtonHeartRate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/purple_button"
            android:onClick="startHeartRate"
            android:text="@string/title_activity_heart_rate"
            android:textColor="@color/white"
            android:width="270dp" />

        <Button
            android:id="@+id/ButtonSkinTemp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/purple_button"
            android:enabled="true"
            android:onClick="startSkinTemp"
            android:text="@string/title_activity_skin_temperature"
            android:textColor="@color/white"
            android:width="270dp" />

        <Button
            android:id="@+id/ButtonMusic"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/purple_button"
            android:enabled="true"
            android:onClick="startMusic"
            android:text="@string/title_activity_music"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>