<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".SelfAssessmentActivity" >

    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textHeading"
                style="@style/purpleSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/assessment_heading" />

            <TextView
                android:id="@+id/textView"
                style="@style/purpleBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/assessment_text" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <!--
             <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/progress_bar_light" />
                -->

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:indeterminate="false"
                    android:max="41"
                    android:minHeight="50dp"
                    android:minWidth="200dp"
                    android:progress="1"
                    android:progressDrawable="@drawable/customprogressbar" />

                <TextView
                    android:id="@+id/textPercent"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/progressBar1"
                    android:text="1%" />
            </RelativeLayout>

            <Button
                android:id="@+id/buttonSubheadingPhysical"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/purple_button"
                android:onClick="startSelfAssessmentPhysical"
                android:text="@string/physical_subheading"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonSubheadingIntellectual"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/purple_button"
                android:onClick="startSelfAssessmentIntellectual"
                android:text="@string/intellectual_subheading"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonSubheadingSocial"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/purple_button"
                android:onClick="startSelfAssessmentSocial"
                android:text="@string/social_subheading"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonSubheadingIndividual"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/purple_button"
                android:onClick="startSelfAssessmentIndividual"
                android:text="@string/individual_subheading"
                android:textColor="@color/white" />

            
        </LinearLayout>
    </ScrollView>

</LinearLayout>